--- a/style.css
+++ b/style.css
@@ -1,8 +1,72 @@
+*{
+    margin:0;
+    padding:0 ;
+    font-family: 'Lato', sans-serif;
+  }
 .contato{
     background-color: #3B9AD7;
     color: white;
+    padding: 0.95rem;
 }
 .contato a{
     color: white;
     text-decoration: none;
+    cursor: pointer;
+    padding: 0 1rem 0 1rem;
+}
+
+.containerHeader{
+    padding: 2rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.containerHeader input{
+    border: none;
+    padding: 0.25rem;
+    font-style: italic;
+}
+
+#navMain{
+    background-color: #3B9AD7;
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    display: flex;
+
+}
+
+#navBar{
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+}
+
+#presentation{
+    display: flex;
+    align-items: center;
+    color: white;
+    width: 100vw;
+    height: 70vh;
+    background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)),
+          url(https://iscon.edu.br/wp-content/uploads/2023/06/cropped-Design-sem-nome2.png); 
+}
+
+#presentation h1{
+    font-weight: 700;
+    font-size: 42px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+#presentation p{
+    letter-spacing: 0.5px;
+}
+
+#presentation div{
+    width: 45%;
+    margin-left: 20rem;
 }
