--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@
 #presentation p{
     letter-spacing: 0.5px;
     padding: 0 0 1rem 0;
+    font-size: 18px;
 }
 
 #presentation div{
@@ -268,4 +269,27 @@
     justify-content: center;
     align-content: center;
     text-align: center;
+}
+
+#mec{
+    color: white;
+    font-size: 32px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)) ,url(https://iscon.edu.br/wp-content/themes/education-zone/images/students-section-img.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
+#mecImg{
+    margin-top: 2rem;
+    width: 40%;
+    height: 40%; 
 }
