--- a/style.css
+++ b/style.css
@@ -7,6 +7,43 @@
   body{
     background-color: #c4d5ff;
   }
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:visited{
+    text-decoration: none;
+    color: white;
+}
+
+#dropdown{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+#dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: #3B9AD7;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  #dropdownContent a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+    #dropdown:hover  #dropdownContent {display: block;}
+
+    #dropdownContent a:hover {background-color: #21577A;}
+
+ 
+  
 .contato{
     background-color: #3B9AD7;
     color: white;
@@ -76,6 +113,34 @@
 #presentation div{
     width: 45%;
     margin-left: 20rem;
+}
+.btn-holder{
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+}
+.btnPresent{
+    display: inline-block;
+    text-align: center;
+    background-color: #3B9AD7;
+    width: 25rem;
+    padding:1rem 3rem;
+    color: white;
+    font-size: 22px;
+    font-weight: 600;
+    border: 2px solid white;
+    border-radius: 10px;
+    margin-right:30rem ;
+    cursor: pointer;
+}
+
+.btnPresent:hover{
+    background-color: #363563;
+    transition-duration: 1s;
 }
 
 #featureTrain{
